# rounders

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  qc-requirements.txt  qc.yaml  style.yml  test.yml
changelog.d/: 20240608_140132_dickinsm_add_missing_docstrings.md  20240608_172515_dickinsm.md  20240608_193249_dickinsm_add_rounding_mode_to_api.md  20240608_195709_dickinsm_changelog_entries.md  20240616_104556_dickinsm_preround_optional_exponent.md  20240616_121201_dickinsm_intermediate_form_from_str.md  20240616_152511_dickinsm_weaken_decade_requirement.md  20240616_183115_dickinsm_overloads_for_intermediate_form.md  20240629_165752_dickinsm.md
doc/: formatting.txt  todo.txt  use_cases.txt
round/: __init__.py  core.py  decimal_overloads.py  float_overloads.py  fraction_overloads.py  generics.py  int_overloads.py  intermediates.py
round/test/: test_round.py
rounder/: __init__.py  core.py  decimal_overloads.py  float_overloads.py  format.py  fraction_overloads.py  generics.py  int_overloads.py  mode_specific.py  modes.py
rounder/test/: test_format.py  test_round.py
src/rounder/: __init__.py  core.py  decimal_overloads.py  float_overloads.py  format.py  fraction_overloads.py  generics.py  int_overloads.py  intermediate.py  mode_specific.py  modes.py  round_to.py
src/rounder/test/: test_format.py  test_round.py
src/rounders/: __init__.py  decimal_overloads.py  float_overloads.py  format.py  fraction_overloads.py  generics.py  int_overloads.py  intermediate.py  intermediate_form.py  mode_specific.py  modes.py  round_to.py
src/rounders/overloads/: __init__.py  decimal.py  float.py  fraction.py  int.py  intermediate_form.py
src/rounders/test/: __init__.py  test_format.py  test_intermediate_form.py  test_round.py  (+1 more)
