[build-system]
requires = ['setuptools>=70', 'setuptools_scm>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'rounders'
description = 'round-function equivalents with different rounding-modes'
readme = 'README.md'
requires-python = '>=3.8'
authors = [{ name = 'Mark Dickinson', email = 'dickinsm@gmail.com' }]
keywords = [
    'round',
    'rounding',
    'significant figures',
    'decimal places',
    'rounding mode',
]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
]
dynamic = ["version"]

[project.urls]
source = 'https://github.com/mdickinson/rounders'

[tool.mypy]
exclude = ['build/']

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
